<resources>
    <string name="app_name">GoLoak</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_text">Halo! Selamat datang di GoLoak</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="kumpulkan_sampah">Kumpulkan Sampah</string>
    <string name="kumpulkan_sampah_desc">Ayo mulai kumpulkan sampah\nsebanyak-banyaknya</string>
    <string name="tempat_sampah">Tempat Sampah</string>
    <string name="tempat_sampah_desc">Taruh semua sampah yang sudah\ndikumpulkan ke tempat sampah\nyang telah disediakan</string>
    <string name="jual_sampah">Jual Sampah</string>
    <string name="jual_sampah_desc">Ayo mulai jual semua sampah yang\ntelah kamu kumpulkan untuk\nmendapatkan poin sebanyak-banyaknya</string>
    <string name="memulai">Memulai</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="daftar_sampah">Daftar Sampah</string>
    <string name="title_list_sampah">Title List Sampah</string>
    <string name="desc_list_sampah">Kami menerima semua %1$s atau sejenis tergolong.</string>
    <string name="point_reward_count">+%1$s Poin</string>
    <string name="point_minus_count">-%1$s Poin</string>
    <string name="total_point">%1$s Poin</string>
    <string name="no_hp">Nomor Telepon</string>
    <string name="title_history">Title History</string>
    <string name="waiting_driver">Waiting Driver</string>
    <string name="date">%1$s</string>
    <string name="history">History</string>
    <string name="point_history">Point History</string>
    <string name="title_profile_head">My Profile</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_empty">Data masih kosong</string>
    <string name="photo">Photo Item</string>
    <string name="title_camera_head">Foto Sampah</string>
    <string name="click_image">Klik gambar untuk membuka kamera</string>
    <string name="title_trash_name">Nama sampah</string>
    <string name="title_trash_quantity">Jumlah sampah</string>
    <string name="submit_trash">Jual sekarang</string>
    <string name="thank_you">Terima kasih!</string>
    <string name="desc_success_submit">Mohon menunggu, kurir akan segera\nke tempat Anda.</string>
    <string name="btn_on_success">OK siap!</string>
</resources>